[package]
name = "bqskitrs"
version = "0.1.0"
authors = ["Ethan Smith <ethanhs@berkeley.edu>"]
license = "LGPL-2.1 AND BSD-3-Clause"
edition = "2018"
build = "build.rs"
publish = false
include = [
    "src/**/*",
    "LICENSE",
    "README.md",
    "build.rs",
    "Dockerfile",
    "pyproject.toml",
    "squaremat/**/*",
    "ceres/**/*",
]

[features]
python = ["numpy", "pyo3"]
static = [
    "openblas-src",
    "blas-src/openblas",
    "openblas-src/static",
    "openblas-src/cblas",
    "openblas-src/lapacke",
    "squaremat/openblas-static",
    "ceres/static",
]
default = [
    "python",
    "mimalloc/local_dynamic_tls",
    "openblas-src",
    "blas-src/openblas",
    "openblas-src/system",
    "openblas-src/cblas",
    "openblas-src/lapacke",
    "squaremat/openblas-system",
]
accelerate = ["accelerate-src", "blas-src/accelerate", "squaremat/accelerate"]
mkl = ["intel-mkl-src", "blas-src/intel-mkl", "squaremat/mkl"]

[dependencies]
num-complex = { version = "0.4.0", features = ["serde"] }
ndarray = { version = "0.15.3", features = ["blas"] }
blas-src = { version = "0.8.0", default-features = false }
openblas-src = { version = "0.10.4", default-features = false, optional = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.6.0+mkl2020.1", optional = true, features = ["mkl-static-lp64-seq"] }
enum_dispatch = "0.3.7"
numpy = { version = "0.14.1", optional = true }
libc = "0.2.104"
num-traits = "0.2.14"
better-panic = "0.2.0"
squaremat = { path="./squaremat" }
md5 = "0.7.0"
rand = "0.8.4"
nlopt = "0.5.4"
ceres = { path="./ceres" }
itertools = "0.10.1"
pyo3 = { version = "0.14.5", optional = true, features = ["extension-module", "abi3-py37"] }
lax = "0.2.0"
derive_more = "0.99.16"
mimalloc = { version = "0.1.26", optional = true, default-features = false, features = ["local_dynamic_tls"] }
ndarray_einsum_beta = "0.7.0"

[patch.crates-io]
# remove once https://github.com/blas-lapack-rs/blas-src/pull/9 is merged
blas-src = { git="https://github.com/ethanhs/blas-src", branch="patch-1" }
# Waiting on openblas-src to make a new 0.11 release...
openblas-src = { git="https://github.com/blas-lapack-rs/openblas-src" }

[target.'cfg(target_os = "windows")'.build-dependencies]
vcpkg = "0.2.15"

[lib]
name = "bqskitrs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_ceres"
harness = false

[[bench]]
name = "bench_qfactor"
harness = false


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true

[package.metadata.maturin]
classifier = [
    'Programming Language :: Python',
    'Programming Language :: Rust',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Compilers',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2021.05.12"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet="x64-windows-static-md", install=[
    "ceres",
    "eigen3",
    "openblas",
    "glog",
    "gflags",
    "clapack",
] }
