[package]
name = "bqskitrs"
version = "0.3.0"
authors = [
    "Ethan Smith <ethanhs@lbl.gov>",
    "Ed Younis <edyounis@lbl.gov>",
]
publish = false
license = "LGPL-2.1 AND BSD-3-Clause"
edition = "2021"

[features]

openblas = [
    "openblas-src",
    "openblas-src/static",
    "ndarray-linalg/openblas-static",
]
accelerate = [
    "accelerate-src",
]
mkl = [
    "intel-mkl-src",
    "ndarray-linalg/intel-mkl-static"
]

[dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-linalg = "0.16.0"

openblas-src = { version = "0.10.5", optional = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true }

ndarray_einsum_beta = "0.7.0"
nlopt = "0.6.0"

enum_dispatch = "0.3.8"
itertools = "0.10.5"
derive_more = "0.99.17"
mimalloc = { version = "0.1.30", optional = true, default-features = false, features = ["local_dynamic_tls"] }

ceres = { path="./ceres", features = ["static"] }

numpy = "0.17.2"
pyo3 = { version = "0.17.2", features = ["extension-module", "abi3-py38"] }

[lib]
name = "bqskitrs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true