[build-system]
requires = [
    "maturin>=0.13,<0.14",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "maturin"

[project]
name = "bqskitrs"
version = "0.3.0"
maintainers = [
    {name = "Ethan Smith", email = "ethanhs@lbl.gov"},
    {name = "Ed Younis", email = "edyounis@lbl.gov"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Source = "https://github.com/bqskit/bqskitrs"

[tool.maturin]
manylinux = "off"
bindings = "pyo3"
