[build-system]
requires = [
    "maturin>=0.13,<0.14",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "maturin"

[project]
name = "bqskitrs"
version = "0.3.0rc2"
maintainers = [
    {name = "Ethan Smith", email = "ethanhs@lbl.gov"},
    {name = "Ed Younis", email = "edyounis@lbl.gov"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Source = "https://github.com/bqskit/bqskitrs"

[tool.maturin]
compatibility = "off"
bindings = "pyo3"
features = ["openblas"]
