[package]
name = "ceres-sys"
version = "0.1.0"
authors = ["Ethan Smith <ethan@ethanhs.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0.79"
cmake = "0.1.48"

[target.'cfg(target_os = "windows")'.build-dependencies]
vcpkg = "0.2.15"

[features]
static = []
